tests/test_assets/semantic/invalid/expressions/unsupported_equality_types.expected
semantic error at line 23: type does not support equality comparison
semantic error at line 28: type does not support equality comparison
semantic error at line 30: type does not support equality comparison
3 semantic errors generated.
